--- a/feature_space.html
+++ b/feature_space.html
@@ -7,164 +7,300 @@
 <style>
   body {
     padding: 15px;
+    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+    color: #111;
   }
+
+  .viz-container {
+    max-width: 100%;
+    overflow: hidden;
+    position: relative;
+  }
+
+  svg {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
   .scatter-img {
     position: absolute;
     pointer-events: none;
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 320px;
+    max-height: 320px;
     object-fit: contain;
+    border: 1px solid rgba(0,0,0,0.15);
+    background: white;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+    display: none;
+    z-index: 10;
+  }
+
+  .tooltip {
+    position: absolute;
+    pointer-events: none;
+    background: rgba(0,0,0,0.75);
+    color: white;
+    padding: 6px 8px;
+    border-radius: 4px;
+    font-size: 12px;
+    display: none;
+    z-index: 11;
   }
 
   .legend {
-    font-family: sans-serif;
-    font-size: 14px;
+    font-size: 13px;
+    margin-top: 8px;
+    display: flex;
+    gap: 12px;
+    flex-wrap: wrap;
+  }
+
+  .legend-item {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    cursor: pointer;
+    user-select: none;
+  }
+
+  .legend-swatch {
+    width: 12px;
+    height: 12px;
+    border-radius: 2px;
+    display: inline-block;
   }
 
   .axis-label {
-    font-family: sans-serif;
-    font-size: 14px;
+    font-size: 13px;
+    fill: #222;
   }
 
   .title {
-    font-family: sans-serif;
     font-size: 18px;
     text-anchor: middle;
+    margin-bottom: 8px;
+  }
+
+  .controls {
+    margin-bottom: 8px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+  }
+
+  .fallback {
+    color: #b33;
+    font-weight: 600;
+  }
+
+  /* small screens */
+  @media (max-width: 520px) {
+    .scatter-img { max-width: 200px; max-height: 200px; }
   }
 </style>
 </head>
 <body>
 
+<h2 class="title" id="vis-title">Feature Space Visualization</h2>
+
+<div class="controls" role="region" aria-label="Visualization controls">
+  <button id="reset-zoom">Reset zoom</button>
+  <button id="download-png">Download PNG</button>
+  <div id="status" aria-live="polite" style="margin-left:12px;"></div>
+</div>
+
+<div class="viz-container" id="viz" role="img" aria-label="Scatter plot of feature embeddings">
+  <!-- SVG will be injected here -->
+  <img id="hover-img" class="scatter-img" alt="Preview image">
+  <div id="tooltip" class="tooltip" role="status" aria-hidden="true"></div>
+</div>
+
+<div id="legend" class="legend" aria-hidden="false"></div>
+<div id="fallback" class="fallback" style="display:none;"></div>
+
 <script>
 d3.json("d3_data.json").then(data => {
-    
-    const width = 700;
-    const height = 500;
-    const margin = {top: 100, right: 80, bottom: 80, left: 80};
+    if (!data || data.length === 0) {
+      d3.select('#fallback').style('display', 'block').text('No data found in d3_data.json.');
+      return;
+    }
 
-    // create svg container
-    const svg = d3.select("body")
-      .append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", height + margin.top + margin.bottom)
-      .append("g")
-      .attr("transform", `translate(${margin.left},${margin.top})`);
+    // Basic config
+    const container = d3.select('#viz');
+    const width = 800;
+    const height = 520;
+    const margin = {top: 20, right: 20, bottom: 50, left: 60};
 
-    svg.append("text")
-      .attr("class", "title")
-      .attr("x", width / 2)
-      .attr("y", -margin.top / 2)
-      .text("Feature Space Scatter Plot");
+    // create responsive svg using viewBox
+    const svg = container.append('svg')
+      .attr('viewBox', `0 0 ${width} ${height}`)
+      .attr('preserveAspectRatio', 'xMidYMid meet')
+      .attr('role', 'img')
+      .attr('aria-labelledby', 'vis-title');
 
-    // scales
-    const xScale = d3.scaleLinear()
-      .domain(d3.extent(data, d => d.x))
-      .range([0, width]);
+    const innerW = width - margin.left - margin.right;
+    const innerH = height - margin.top - margin.bottom;
 
-    const yScale = d3.scaleLinear()
-      .domain(d3.extent(data, d => d.y))
-      .range([height, 0]);
+    const g = svg.append('g').attr('transform', `translate(${margin.left},${margin.top})`);
 
-    // colors
-    const colorScale = d3.scaleOrdinal()
-      .domain([0, 1])
-      .range(["green", "red"]);
+    // assume data items have x, y, label, img (adjust if different)
+    const xs = data.map(d => +d.x);
+    const ys = data.map(d => +d.y);
+
+    const x = d3.scaleLinear().domain(d3.extent(xs)).nice().range([0, innerW]);
+    const y = d3.scaleLinear().domain(d3.extent(ys)).nice().range([innerH, 0]);
+
+    const color = d3.scaleOrdinal(d3.schemeTableau10);
+    const categories = Array.from(new Set(data.map(d => d.label ?? 'N/A')));
+    color.domain(categories);
 
     // axes
-    const xAxis = d3.axisBottom(xScale);
-    const yAxis = d3.axisLeft(yScale);
+    const xAxis = d3.axisBottom(x).ticks(6).tickSizeOuter(0);
+    const yAxis = d3.axisLeft(y).ticks(6).tickSizeOuter(0);
 
-    svg.append("g")
-      .attr("transform", `translate(0,${height})`)
-      .call(xAxis);
+    g.append('g').attr('class','x-axis').attr('transform', `translate(0,${innerH})`).call(xAxis);
+    g.append('g').attr('class','y-axis').call(yAxis);
 
-    svg.append("g")
-      .call(yAxis);
+    g.append('text').attr('class','axis-label').attr('x', innerW/2).attr('y', innerH + 40).attr('text-anchor','middle').text('Feature 1');
+    g.append('text').attr('class','axis-label').attr('x', -innerH/2).attr('y', -44).attr('transform','rotate(-90)').attr('text-anchor','middle').text('Feature 2');
 
-    // axis labels
-    svg.append("text")
-      .attr("class", "axis-label")
-      .attr("x", width / 2)
-      .attr("y", height + 40)
-      .attr("text-anchor", "middle")
-      .text("x");
+    // points group
+    const points = g.append('g').attr('class','points');
 
-    svg.append("text")
-      .attr("class", "axis-label")
-      .attr("x", -height / 2)
-      .attr("y", -45)
-      .attr("transform", "rotate(-90)")
-      .attr("text-anchor", "middle")
-      .text("y");
+    // tooltip and hover image
+    const tooltip = d3.select('#tooltip');
+    const hoverImg = d3.select('#hover-img');
 
-    // data points
-    svg.selectAll("circle")
+    points.selectAll('circle')
       .data(data)
-      .enter()
-      .append("circle")
-      .attr("cx", d => xScale(d.x))
-      .attr("cy", d => yScale(d.y))
-      .attr("r", 6)
-      .attr("fill", d => colorScale(d.label))
-      .attr("opacity", 0.7)
-      .on("mouseover", function(event, d) {
-          const imgWidth = Math.min(500, window.innerWidth * 0.5);
-          const imgHeight = Math.min(500, window.innerHeight * 0.5);
-
-          // keep image inside view
-          const left = (event.pageX + imgWidth + 20 > window.innerWidth)
-              ? event.pageX - imgWidth - 10
-              : event.pageX + 10;
-
-          const top = (event.pageY + imgHeight + 20 > window.innerHeight)
-              ? event.pageY - imgHeight - 10
-              : event.pageY + 10;
-
-          d3.select("body").append("img")
-            .attr("class", "scatter-img")
-            .attr("src", d.img)
-            .style("width", imgWidth + "px")
-            .style("height", imgHeight + "px")
-            .style("left", left + "px")
-            .style("top", top + "px");
+      .join('circle')
+      .attr('cx', d => x(+d.x))
+      .attr('cy', d => y(+d.y))
+      .attr('r', 4)
+      .attr('fill', d => color(d.label ?? 'N/A'))
+      .attr('opacity', 0.9)
+      .attr('tabindex', 0)
+      .attr('role', 'img')
+      .on('mouseenter focus', function(event, d) {
+        d3.select(this).attr('stroke','black').attr('stroke-width',1.25);
+        const [mx, my] = d3.pointer(event, container.node());
+        showTooltip(d, mx, my);
       })
-      .on("mousemove", function(event) {
-          d3.select(".scatter-img")
-            .style("left", (event.pageX + 10) + "px")
-            .style("top", (event.pageY + 10) + "px");
+      .on('mousemove', function(event, d) {
+        const [mx, my] = d3.pointer(event, container.node());
+        movePreview(mx, my, d);
+        showTooltip(d, mx, my);
       })
-      .on("mouseout", function() {
-          d3.select(".scatter-img").remove();
+      .on('mouseleave blur', function() {
+        d3.select(this).attr('stroke', null);
+        hidePreview();
+        tooltip.style('display','none').attr('aria-hidden', true);
+      })
+      .on('click', (event,d) => {
+        // example click handler: log or open image
+        console.log('clicked', d);
       });
 
     // legend
-    const legendData = [
-        {label: "normal", color: "green"},
-        {label: "abnormal", color: "red"}
-    ];
+    const legend = d3.select('#legend');
+    categories.forEach(cat => {
+      const item = legend.append('div').attr('class','legend-item').attr('data-cat', cat);
+      item.append('div').attr('class','legend-swatch').style('background', color(cat));
+      item.append('div').text(cat);
+      item.on('click', function() {
+        const active = d3.select(this).classed('inactive');
+        d3.select(this).classed('inactive', !active);
+        // toggle visibility
+        points.selectAll('circle').filter(d => (d.label ?? 'N/A') === cat)
+          .transition().duration(200)
+          .style('opacity', active ? 0.9 : 0.08)
+          .attr('pointer-events', active ? 'auto' : 'none');
+      });
+    });
 
-    const legend = svg.append("g")
-      .attr("class", "legend")
-      .attr("transform", `translate(${width}, 0)`);
+    // zoom & pan
+    const zoom = d3.zoom()
+      .scaleExtent([0.5, 20])
+      .on('zoom', (event) => {
+        g.attr('transform', event.transform);
+      });
 
-    legend.selectAll("rect")
-      .data(legendData)
-      .enter()
-      .append("rect")
-      .attr("x", 0)
-      .attr("y", (d,i) => i * 20)
-      .attr("width", 12)
-      .attr("height", 12)
-      .attr("fill", d => d.color);
+    svg.call(zoom);
 
-    legend.selectAll("text")
-      .data(legendData)
-      .enter()
-      .append("text")
-      .attr("x", 18)
-      .attr("y", (d,i) => i * 20 + 10)
-      .text(d => d.label);
+    d3.select('#reset-zoom').on('click', () => {
+      svg.transition().duration(400).call(zoom.transform, d3.zoomIdentity);
+    });
+
+    d3.select('#status').text(`${data.length} points loaded.`);
+
+    // helper functions
+    function showTooltip(d, mx, my) {
+      const txt = (d.id ?? '') + (d.label ? ` — ${d.label}` : '');
+      tooltip.style('display','block')
+             .style('left', (mx + 12) + 'px')
+             .style('top', (my + 12) + 'px')
+             .text(txt)
+             .attr('aria-hidden', false);
+      movePreview(mx, my, d);
+    }
+
+    function movePreview(mx, my, d) {
+      if (!d.img) { hidePreview(); return; }
+      const imgUrl = d.img;
+      hoverImg.attr('src', imgUrl).style('display','block');
+      // position with boundary checks
+      const containerRect = container.node().getBoundingClientRect();
+      const imgEl = hoverImg.node();
+      const imgW = Math.min(320, containerRect.width * 0.4);
+      const imgH = imgW;
+      hoverImg.style('width', imgW + 'px').style('height', 'auto');
+
+      // compute left/top relative to document
+      let left = containerRect.left + mx + 12;
+      let top = containerRect.top + my + 12;
+
+      // if overflows right, shift left
+      if (left + imgW > window.innerWidth - 10) left = containerRect.left + mx - imgW - 12;
+      if (top + imgH > window.innerHeight - 10) top = containerRect.top + my - imgH - 12;
+
+      hoverImg.style('left', (left - containerRect.left) + 'px').style('top', (top - containerRect.top) + 'px');
+    }
+
+    function hidePreview() {
+      hoverImg.style('display','none').attr('src','');
+    }
+
+    // download PNG
+    d3.select('#download-png').on('click', () => {
+      const svgNode = svg.node();
+      const serializer = new XMLSerializer();
+      const svgString = serializer.serializeToString(svgNode);
+      const canvas = document.createElement('canvas');
+      canvas.width = width;
+      canvas.height = height;
+      const ctx = canvas.getContext('2d');
+      const img = new Image();
+      const blob = new Blob([svgString], {type: 'image/svg+xml;charset=utf-8'});
+      const url = URL.createObjectURL(blob);
+      img.onload = function() {
+        ctx.fillStyle = '#fff';
+        ctx.fillRect(0,0,canvas.width,canvas.height);
+        ctx.drawImage(img, 0, 0);
+        URL.revokeObjectURL(url);
+        const a = document.createElement('a');
+        a.download = 'feature_space.png';
+        a.href = canvas.toDataURL('image/png');
+        a.click();
+      };
+      img.src = url;
+    });
+
+}).catch(err => {
+  d3.select('#fallback').style('display','block').text('Failed to load d3_data.json: ' + err.message);
+  console.error(err);
 });
+
 </script>
 </body>
 </html>
