resolved stash merge

--- a/latent_space_viz.html
+++ b/latent_space_viz.html
@@ -202,7 +202,7 @@
         hoverImg.style('display', 'none').attr('src', '');
       }
     
-      // Download as PNG
+      // download as PNG
       d3.select('#download-png').on('click', () => {
         const svgNode = svg.node();
         const serializer = new XMLSerializer();
